--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,20 @@
 table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    display: table-cell;
- vertical-align: middle;
- padding: 20px;
-  }
+  border: 1px solid black;
+  border-collapse: collapse;
+  display: table-cell;
+  vertical-align: middle;
+  padding: 20px;
+}
 
+.showOnHover {
+  display: none;
+}
+
+/* 
+.myDIV:hover+.hide {
+  display: block;
+  color: red;
+} */
 .switch {
   position: relative;
   display: inline-block;
@@ -43,15 +52,15 @@ table, th, td {
   transition: .4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -67,7 +76,8 @@ input:checked + .slider:before {
 }
 
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50;
+  /* Green */
   border: none;
   color: white;
   padding: 20px;
@@ -80,14 +90,28 @@ input:checked + .slider:before {
 }
 
 .button:hover {
- filter: brightness(0.8);
+  filter: brightness(0.8);
 }
 
-.button1 {border-radius: 2px;}
-.button2 {border-radius: 4px;}
-.button3 {border-radius: 8px;}
-.button4 {border-radius: 12px;}
-.button5 {border-radius: 50%;}
+.button1 {
+  border-radius: 2px;
+}
+
+.button2 {
+  border-radius: 4px;
+}
+
+.button3 {
+  border-radius: 8px;
+}
+
+.button4 {
+  border-radius: 12px;
+}
+
+.button5 {
+  border-radius: 50%;
+}
 
 #myBtn {
   display: none;
