--- a/templates/status01.html
+++ b/templates/status01.html
@@ -175,6 +175,8 @@
 
       }
 
+
+
       function getStatus() {
         fetch('http://127.0.0.1:5000/api/s')
           .then(function(response) {
@@ -185,27 +187,22 @@
 
             // Access the towers
             for (var t = 0; t < (data.towers).length; t++) {
-              var x = document.createElement("TABLE");
-              x.setAttribute("id", data.towers[t].name);
-              document.body.appendChild(x);
+              ele.innerHTML = ele.innerHTML + '<table>'
+
               // Access the levels
               for (var l = 0; l < data.towers[t].levels.length; l++) {
-                var table = document.getElementById( data.towers[t].name);
-                var row = table.insertRow();
-
+                ele.innerHTML = ele.innerHTML + '<tr>'
 
                 // Acces the pods
                 for (var p = 0; p < data.towers[t].levels[l].pods.length; p++) {
-
-                  var cell = row.insertCell(p);
-                  cell.innerHTML = data.towers[t].levels[l].pods[p].podID + ' ' + data.towers[t].levels[l].pods[p].plantName;
-
-
+                  ele.innerHTML = ele.innerHTML + '<td> pod</td>'
+                  // console.log(t, l, p)
+                  // console.log(data.tower s[t].levels[l].pods[p].plantName)
                 }
-
+                ele.innerHTML = ele.innerHTML + '</tr>'
 
               }
-
+              ele.innerHTML = ele.innerHTML + '</table>'
 
 
             }
@@ -223,7 +220,51 @@
 
           })
       }
-    
+
+      // https://crunchify.com/how-to-iterate-through-jsonarray-in-javascript/
+      function t(sparkData) {
+        var graph = {
+          "sparkData": [{
+            "one": [97, 5, 69, 35, 28, 52, 51, 55]
+          }, {
+            "two": [96, 63, 18, 55, 13, 47, 77, 64]
+          }, {
+            "three": [94, 75, 83, 44, 43, 86, 68, 26]
+          }]
+        }
+
+        var i = 0
+        document.writeln("<br><br><div align='center'><table border='1'><tr>");
+
+        for (var i = 0; i < graph.sparkData.length; i++) {
+          var obj = graph.sparkData[i];
+          console.log(obj);
+          var crunchifyName;
+          var crunchifyValue;
+
+          document.writeln("<td>");
+          document.writeln("<table border='0'  width=100 >");
+
+          for (var key in obj) {
+            crunchifyName = key;
+            crunchifyValue = obj[key].toString(); +
+            document.writeln("<tr><td><B>" + crunchifyName +
+              ":  </B></td><td width=50>" + crunchifyValue +
+              "</td></tr>");
+            document.writeln("</table>");
+            document.writeln("</td>");
+
+          }
+        }
+        document.writeln("</tr></table></div>");
+      }
+
+
+
+
+
+
+
       var socket = io();
 
 
