--- a/templates/status.html
+++ b/templates/status.html
@@ -38,14 +38,13 @@
 
   <body>
     <div id="T"> </div>
-    <div id="myData"></div>
+    <div id="infoBox"></div>
     <script>
       //Calls functions to load defaults and info.
       document.addEventListener("DOMContentLoaded", function() {
 
         // createCheckBoxes();
         getStatus();
-        // t();
       });
 
       //Get the button
@@ -163,6 +162,17 @@
 
       }
 
+
+      // https://stackoverflow.com/questions/19032954/why-is-jsonobject-length-undefined
+      // console.log(data.lenght)
+      // console.log(Object.keys(data.towers).length)
+      // //
+      // console.log(data.towers)
+      // console.log(data.towers[1].name)
+      // console.log(data.towers[1].levels[2].pods)
+      // console.log(data.lenght)
+      // console.log(data.towers[0].tower01[1].pods[0].plantName)
+      // console.log(data.towers[0].level)
       function getStatus() {
         fetch('http://127.0.0.1:5000/api/s')
           .then(function(response) {
@@ -174,47 +184,31 @@
             // Access the towers
             for (var t = 0; t < (data.towers).length; t++) {
               var x = document.createElement("TABLE");
-              x.setAttribute("id", data.towers[t].name);
+              var towerName = data.towers[t].name;
+              x.setAttribute("id", towerName);
               document.body.appendChild(x);
               // Access the levels
-              for (var l = data.towers[t].levels.length - 1; l >= 0; l--) {
-                var table = document.getElementById(data.towers[t].name);
+              var towerHeight = data.towers[t].levels.length;
+              for (var l = towerHeight - 1; l >= 0; l--) {
+                var table = document.getElementById(towerName);
                 var row = table.insertRow();
-
-
+                var zerofilledLevel = ('00' + data.towers[t].levels[l].level).slice(-2);
+                row.setAttribute("id", "level-" + '0' + (t + 1) + '-' + zerofilledLevel)
                 // Acces the pods
-                for (var p = 0; p < data.towers[t].levels[l].pods.length; p++) {
-
+                var numberOfPods = data.towers[t].levels[l].pods.length;
+                for (var p = 0; p < numberOfPods; p++) {
                   var cell = row.insertCell(p);
-                  cell.innerHTML = data.towers[t].levels[l].pods[p].podID + ' ' + data.towers[t].levels[l].pods[p].plantName;
-
-
+                  let date = new Date(data.towers[t].levels[l].pods[p].plantedDate);
+                  cell.setAttribute("id", data.towers[t].levels[l].pods[p].podID)
+                  cell.innerHTML = '<span style = "color:grey;font-size:12px;"> ' + data.towers[t].levels[l].pods[p].podID + ' </span><br>' + data.towers[t].levels[l].pods[p].plantName;
+                  cell.innerHTML = cell.innerHTML + '<br><span style="color:grey;font-size:12px;">' + date.getDate() + "-" + date.getMonth() + 1 + "-" + date.getFullYear() + '</span>';
                 }
-
-
               }
-
-
-
             }
-
-            // https://stackoverflow.com/questions/19032954/why-is-jsonobject-length-undefined
-            // console.log(data.lenght)
-            // console.log(Object.keys(data.towers).length)
-            // //
-            // console.log(data.towers)
-            // console.log(data.towers[1].name)
-            // console.log(data.towers[1].levels[2].pods)
-            // console.log(data.lenght)
-            // console.log(data.towers[0].tower01[1].pods[0].plantName)
-            // console.log(data.towers[0].level)
-
           })
       }
 
       var socket = io();
-
-
       $(document).ready(function() {
         // Connect to the Socket.IO server.
         // The connection URL has the following format, relative to the current page:
@@ -230,16 +224,13 @@
           console.log("connected!")
         });
 
-
-
-
         // Event handler for server sent data.
         // The callback function is invoked whenever the server emits data
         // to the client. The data is then displayed in the "Received"
         // section of the page.
-        socket.on('my_response', function(msg, cb) {
-          $('#log').append('<br>' + $('<div/>').text('Received #' + msg.count + ': ' + msg.data).html());
-          console.log("received")
+        socket.on('telemetry', function(msg, cb) {
+          document.getElementById("T").innerHTML = msg
+          console.log("received!")
           if (cb)
             cb();
         });
