--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,11 +6,21 @@ table, th, td {
   padding: 20px;
 }
 
+.datePlantedStatus {
+  font-size: 80%;
+  color: red;
+}
+
+span {
+  font-size: 80%;
+  color: red;
+}
+
 .showOnHover {
   display: none;
 }
 
-/* 
+/*
 .myDIV:hover+.hide {
   display: block;
   color: red;
