--- a/templates/index.html
+++ b/templates/index.html
@@ -342,7 +342,7 @@
         // The callback function is invoked whenever the server emits data
         // to the client. The data is then displayed in the "Received"
         // section of the page.
-        socket.on('my_response', function(msg, cb) {
+        socket.on('telemetry', function(msg, cb) {
           $('#log').append('<br>' + $('<div/>').text('Received #' + msg.count + ': ' + msg.data).html());
           console.log("received")
           if (cb)
